# my-hashtag-generator

./: .gitignore  pyproject.toml  setup.sh
backend/: History.js  extractAudio.js  generateToken.js  package-lock.json  package.json  server.js  transcribe.py
backend/models/: User.js
frontend/: craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  api.js  index.css  index.js
frontend/src/components/: Login.jsx  Navigation.jsx  Register.jsx
frontend/src/pages/: About.jsx  History.jsx  Home.jsx
